--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 </head>
 <body>
+   <style>
+   .heading {
+       text-align: center;
+   }
+   </style>
+
+     <h1 class="heading">Mocha Tests</h1>
     <!-- -->
     <div id="mocha"></div>
     <script>
@@ -21,12 +28,12 @@
         var assert = chai.assert;
     </script>
 
-    <!-- the function to be tested -->
-    <script src="greet.js" charset="utf-8"></script>
-    <!-- followed by the tests -->
-    <script src="test/greet.tests.js" charset="utf-8"></script>
+     <!-- the function to be tested -->
+     <script src="greet.js" charset="utf-8"></script>
+     <!-- followed by the tests -->
+     <script src="test/greet.tests.js" charset="utf-8"></script>
 
-    <script src="isFromBellville.js" charset="utf-8"></script>
+     <script src="isFromBellville.js" charset="utf-8"></script>
      <script src="test/isFromBellville.tests.js" charset="utf-8"></script>
 
      <script src="regCheck.js" charset="utf-8"></script>
@@ -34,7 +41,6 @@
 
      <script src="countRegNumber.js" charset="utf-8"></script>
      <script src="test/countRegNumber.tests.js" charset="utf-8"></script>
-
 
      <script src="isWeekday.js" charset="utf-8"></script>
      <script src="test/isWeekday.tests.js" charset="utf-8"></script>
@@ -51,7 +57,6 @@
      <script src="transportFee.js" charset="utf-8"></script>
      <script src="test/transportFee.tests.js" charset="utf-8"></script>
 
-
      <script src="totalPhoneBill.js" charset="utf-8"></script>
      <script src="test/totalPhoneBill.tests.js" charset="utf-8"></script>
 
@@ -63,7 +68,6 @@
 
      <script src="findItemsOver.js" charset="utf-8"></script>
      <script src="test/findItemsOver.tests.js" charset="utf-8"></script>
-
 
      <script src="mostProfitableDepartment.js" charset="utf-8"></script>
      <script src="test/mostProfitableDepartment.tests.js" charset="utf-8"></script>
